--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>When i was in 2st year i made a library management system using C basic code and now in 3rd year i am working on a project of Student Management System and a personal website.</p>
+          <p>When i was in 2nd year i made a library management system using C basic code and now in 3rd year i am working on a project of Student Management System and a personal website.</p>
         </div>
 
         <div class="row">
